fluxcd/apps/overlays/production/filebrowser/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: filebrowser
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: filebrowser
          image: docker.io/filebrowser/filebrowser:v2.63.17
  volumeClaimTemplates:
    - metadata:
        name: database
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 1Gi
