fluxcd/apps/overlays/production/filebrowser/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser-xylem
spec:
  parentRefs:
    - name: xylem-gateway
      namespace: arylls-lookout
  hostnames:
    - "filebrowse.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: filebrowser
          port: 8754
